# gdb-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TOOLS.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_question.yml
.github/scripts/: extract_release_notes.py
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: README.md
plugins/gdb-mcp/: .mcp.json
plugins/gdb-mcp/.codex-plugin/: plugin.json
src/gdb_mcp/: __init__.py  analysis.py  cli.py  config.py  installer.py  lazy.py  mi.py  server.py  session.py
tests/: test_cli.py  test_installer.py  test_lazy_proxy.py  test_mi.py  test_server_contract.py  test_session_async.py  test_session_smoke.py
tests/fixtures/: attach_target.c  fake_gdb.py  sample.c
