[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb-mcp"
version = "0.2.0"
description = "Multi-session Model Context Protocol server for GDB and gdbserver."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "gdb-mcp contributors" },
]
keywords = ["gdb", "gdbserver", "debugger", "mcp", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "mcp>=1.20,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]

[project.scripts]
gdb-mcp = "gdb_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gdb_mcp = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.coverage.run]
branch = true
source = ["gdb_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true
